[package]
name = "quvyn"
version = "0.1.0"
authors = ["Erik Doernenburg <erik@doernenburg.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
getopts = "0.2"
gotham = "0.4"
gotham_derive = "*"
ammonia = "3.1"
uuid = { version = "0.8", features = ["v4", "serde"] }

hyper = "0.12"
mime = "0.3"
regex = "1.3"
glob = "0.3"
futures = "0.1"
failure = "0.1"
pulldown-cmark = "0.7"
