[package]
name = "quvyn"
version = "0.1.0"
authors = ["Erik Doernenburg <erik@doernenburg.com>"]
edition = "2018"

[dependencies]
regex = "1.3"
glob = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
getopts = "0.2"
signal-hook = "0.3.4"

gotham = "0.4"
gotham_derive = "*"
pulldown-cmark = "0.7"
ammonia = "3.1"
gravatar = "0.2.0"

hyper = "0.12"
mime = "0.3"
futures = "0.1"
failure = "0.1"

csv = "1.1"
