[package]
name = "quvyn"
version = "0.1.0"
authors = ["Erik Doernenburg <erik@doernenburg.com>"]
edition = "2018"

[dependencies]
regex = "1.3"
glob = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
getopts = "0.2"
signal-hook = "0.3.4"

gotham = "0.7.1"
gotham_derive = "0.7"
pulldown-cmark = "0.9.1"
ammonia = "3.1"
gravatar = "0.2.0"
csv = "1.1"

mime = "0.3"
futures-util = "0.3.14"

